--- a/configs/stableSRNew/v2-finetune_text_T_512_edge.yaml
+++ b/configs/stableSRNew/v2-finetune_text_T_512_edge.yaml
@@ -47,7 +47,7 @@ model:
         use_linear_in_transformer: True
         transformer_depth: 1
         context_dim: 1024
-        use_checkpoint: True
+        use_checkpoint: False
         legacy: False
         semb_channels: 256
         # Edge processing parameters
