--- a/configs/stableSRNew/v2-finetune_text_T_512_edge.yaml
+++ b/configs/stableSRNew/v2-finetune_text_T_512_edge.yaml
@@ -252,3 +252,7 @@ lightning:
     benchmark: True
     max_steps: 5000 #800000
     accumulate_grad_batches: 6
+    plugins:
+      - class_path: pytorch_lightning.plugins.DDPPlugin
+        init_args:
+          find_unused_parameters: False
