--- a/configs/stableSRNew/v2-finetune_text_T_512_edge.yaml
+++ b/configs/stableSRNew/v2-finetune_text_T_512_edge.yaml
@@ -252,7 +252,4 @@ lightning:
     benchmark: True
     max_steps: 5000 #800000
     accumulate_grad_batches: 6
-    plugins:
-      - class_path: pytorch_lightning.plugins.DDPPlugin
-        init_args:
-          find_unused_parameters: False
+    # Note: DDP configuration handled in main.py
