feat: Add Notion integration and Edge processing improvements
🎨 Major Features:
- Add Notion integration for validation report upload
- Complete documentation set for Notion setup and usage
- Training guide for Edge-enhanced StableSR models
- Validation scripts for Edge processing workflow

📤 Notion Integration:
- upload_to_notion.py: Direct upload of validation reports to Notion
- setup_notion.sh: One-click Notion integration setup wizard
- generate_notion_report.py: Offline Markdown report generator
- Complete documentation (NOTION_QUICK_START.md, NOTION_SETUP.md, README_NOTION.md)

🔧 Edge Processing Improvements:
- Fixed Edge feature normalization in edge_processor.py
- Updated UNet to support Edge processing with 4->8 channel conversion
- Improved checkpoint loading to handle Turbo->Edge model conversion
- Added diagnostic tools (test_edge_model.py, test_edge_checkpoint.py)

📚 Documentation:
- TRAINING_GUIDE.md: Complete guide for training Edge models on Turbo base
- EDGE_GT_INTEGRATION_README.md: Edge-GT integration instructions
- Comprehensive Notion usage guides

🚀 Scripts:
- train_edge_turbo.sh: Training script for Edge-enhanced models
- valid_edge_turbo.sh: Validation workflow script
- test_inference.sh: Quick inference testing

⚙️ Configuration Updates:
- Updated v2-finetune_text_T_512_edge_fixed.yaml to use Turbo checkpoint
- Changed dataset path to Flickr2K
- Adjusted checkpoint save frequency and training steps

✨ Key Improvements:
- Edge processor now includes output normalization (tanh * 0.5)
- Proper weight initialization for Edge channels (4->8 expansion)
- Support for both standard and Edge-enhanced inference
- Automated Notion report generation with detailed metrics

--- a/configs/stableSRNew/v2-finetune_text_T_512_edge_fixed.yaml
+++ b/configs/stableSRNew/v2-finetune_text_T_512_edge_fixed.yaml
@@ -19,7 +19,7 @@ model:
     scale_factor: 0.18215
     use_ema: False
     # for training only
-    ckpt_path: /stablesr_dataset/checkpoints/stable_diffmodels/v2-1_512-ema-pruned.ckpt
+    ckpt_path: /stablesr_dataset/checkpoints/stablesr_turbo.ckpt
     unfrozen_diff: False
     random_size: False
     time_replace: 1000
@@ -59,7 +59,7 @@ model:
       target: ldm.models.autoencoder.AutoencoderKL
       params:
         # for training only
-        ckpt_path: /stablesr_dataset/checkpoints/stable_diffmodels/v2-1_512-ema-pruned.ckpt
+        ckpt_path: /stablesr_dataset/checkpoints/stablesr_turbo.ckpt
         embed_dim: 4
         monitor: val/rec_loss
         ddconfig:
@@ -143,7 +143,7 @@ data:
       params:
         queue_size: 180
         #gt_path: ['/mnt/nas-dp/dataset/DIV8K/train_HR/', '/mnt/nas-dp/dataset/df2k_ost/GT/']
-        gt_path: ['/stablesr_dataset/dataset/DIV2K/DIV2K_train_HR/']
+        gt_path: ['/stablesr_dataset/dataset/Flickr2K']
         #face_gt_path: '/mnt/nas-dp/dataset/FFHQ/1024/'
         #num_face: 10000
         crop_size: 512
@@ -240,7 +240,7 @@ test_data:
 lightning:
   modelcheckpoint:
     params:
-      every_n_train_steps: 200
+      every_n_train_steps: 2000
   callbacks:
     image_logger:
       target: main.ImageLogger
@@ -251,6 +251,6 @@ lightning:
 
   trainer:
     benchmark: True
-    max_steps: 2000 #800000
+    max_steps: 800000
     accumulate_grad_batches: 8  # Increased accumulation for better gradient stability
     # Note: DDP configuration handled in main.py
