--- a/configs/stableSRNew/v2-finetune_text_T_512_edge_loss.yaml
+++ b/configs/stableSRNew/v2-finetune_text_T_512_edge_loss.yaml
@@ -1,6 +1,6 @@
 sf: 4
 model:
-  base_learning_rate: 5.0e-05
+  base_learning_rate: 3.0e-05  # Reduced learning rate for better stability
   target: ldm.models.diffusion.ddpm_with_edge.LatentDiffusionSRTextWTWithEdge
   params:
     # parameterization: "v"
@@ -19,18 +19,19 @@ model:
     scale_factor: 0.18215
     use_ema: False
     # for training only
-    ckpt_path: /stablesr_dataset/checkpoints/stable_diffmodels/v2-1_512-ema-pruned.ckpt
+    ckpt_path: /stablesr_dataset/checkpoints/stablesr_turbo.ckpt
     unfrozen_diff: False
     random_size: False
     time_replace: 1000
     use_usm: True
-    # Edge processing parameters
+    # Edge processing parameters - Fixed configuration
     use_edge_processing: True
     edge_input_channels: 3
-    edge_loss_weight: 0.1
+    edge_weight: 0.1  # Weight for edge features
     #P2 weighting, we do not use in final version
     p2_gamma: ~
     p2_k: ~
+    edge_loss_weight: 0.1
     # ignore_keys: []
 
     unet_config:
@@ -51,7 +52,7 @@ model:
         use_checkpoint: False
         legacy: False
         semb_channels: 256
-        # Edge processing parameters
+        # Edge processing parameters - Fixed configuration
         use_edge_processing: True
         edge_input_channels: 3
 
@@ -59,7 +60,7 @@ model:
       target: ldm.models.autoencoder.AutoencoderKL
       params:
         # for training only
-        ckpt_path: /stablesr_dataset/checkpoints/stable_diffmodels/v2-1_512-ema-pruned.ckpt
+        ckpt_path: /stablesr_dataset/checkpoints/stablesr_turbo.ckpt
         embed_dim: 4
         monitor: val/rec_loss
         ddconfig:
@@ -135,15 +136,15 @@ degradation:
 data:
   target: main.DataModuleFromConfig
   params:
-    batch_size: 2
-    num_workers: 6
+    batch_size: 1  # Reduced batch size for better memory management
+    num_workers: 4  # Reduced workers for stability
     wrap: false
     train:
       target: basicsr.data.realesrgan_dataset.RealESRGANDataset
       params:
         queue_size: 180
         #gt_path: ['/mnt/nas-dp/dataset/DIV8K/train_HR/', '/mnt/nas-dp/dataset/df2k_ost/GT/']
-        gt_path: ['/stablesr_dataset/dataset/DIV2K/DIV2K_train_HR/']
+        gt_path: ['/stablesr_dataset/dataset/DIV2K/DIV2K_train_HR']
         #face_gt_path: '/mnt/nas-dp/dataset/FFHQ/1024/'
         #num_face: 10000
         crop_size: 512
@@ -205,7 +206,7 @@ test_data:
   target: main.DataModuleFromConfig
   params:
     batch_size: 1
-    num_workers: 6
+    num_workers: 4
     wrap: false
     test:
       target: basicsr.data.realesrgan_dataset.RealESRGANDataset
@@ -240,7 +241,7 @@ test_data:
 lightning:
   modelcheckpoint:
     params:
-      every_n_train_steps: 200
+      every_n_train_steps: 2000
   callbacks:
     image_logger:
       target: main.ImageLogger
@@ -251,6 +252,6 @@ lightning:
 
   trainer:
     benchmark: True
-    max_steps: 2000 #800000
-    accumulate_grad_batches: 6
+    max_steps: 800000
+    accumulate_grad_batches: 8  # Increased accumulation for better gradient stability
     # Note: DDP configuration handled in main.py
