feat: 增强推理菜单系统
主要功能:
- 添加交互式中文菜单 (3种推理模式)
- 添加参数验证和持久化功能
- 支持推理指定文件或限制数量
- 添加自动指标计算功能
- 添加Config和VQGAN路径参数
- Edge和No-Edge结果分目录保存

模式说明:
1. 批量推理全部checkpoint (edge & no-edge)
2. 推理指定checkpoint (edge模式)
3. 推理指定checkpoint (no-edge模式, 白色边缘图)

新增参数:
- Config文件路径 (可配置)
- VQGAN Checkpoint路径 (可配置)
- 最大推理图片数量 (-1=全部)
- 指定文件推理功能
- 自动计算PSNR/SSIM/LPIPS指标

改进:
- 全面的参数验证和错误提示
- 参数持久化到.inference_defaults.conf
- 友好的中文用户界面
- 实时文件/目录数量统计
- 推理完成后可选计算指标

--- a/.inference_defaults.conf
+++ b/.inference_defaults.conf
@@ -4,3 +4,5 @@ DEFAULT_OUTPUT_BASE="weiqiang"
 DEFAULT_INIT_IMG="/mnt/nas_dp/test_dataset/128x128_valid_LR"
 DEFAULT_GT_IMG="/mnt/nas_dp/test_dataset/512x512_valid_HR"
 DEFAULT_MAX_IMAGES="1"
+DEFAULT_CONFIG="configs/stableSRNew/v2-finetune_text_T_512_edge.yaml"
+DEFAULT_VQGAN_CKPT="/root/checkpoints/vqgan_cfw_00011.ckpt"
