--- a/.inference_defaults.conf
+++ b/.inference_defaults.conf
@@ -1,7 +1,7 @@
 # 保存的推理默认参数
 DEFAULT_CKPT="/root/dp/StableSR_Edge_v2_loss/logs/2025-10-10T03-46-34_stablesr_edge_loss_20251010_034631/checkpoints/epoch=000190.ckpt"
 DEFAULT_LOGS_DIR="/root/dp/StableSR_Edge_v2_loss/logs"
-DEFAULT_OUTPUT_BASE="double-check"
+DEFAULT_OUTPUT_BASE="validation_results"
 DEFAULT_INIT_IMG="/mnt/nas_dp/test_dataset/128x128_valid_LR"
 DEFAULT_GT_IMG="/mnt/nas_dp/test_dataset/512x512_valid_HR"
 DEFAULT_MAX_IMAGES="-1"
