Add ignore_keys to skip loading structcond_stage_model from checkpoint

--- a/configs/stableSRNew/v2-finetune_text_T_512_edge_800.yaml
+++ b/configs/stableSRNew/v2-finetune_text_T_512_edge_800.yaml
@@ -27,7 +27,7 @@ model:
     #P2 weighting, we do not use in final version
     p2_gamma: ~
     p2_k: ~
-    # ignore_keys: []
+    ignore_keys: ['structcond_stage_model']
 
     unet_config:
       target: ldm.modules.diffusionmodules.openaimodel.UNetModelDualcondV2
