change back to 8 channels inputs by jiaqi

--- a/configs/stableSRNew/v2-finetune_text_T_512_edge_800.yaml
+++ b/configs/stableSRNew/v2-finetune_text_T_512_edge_800.yaml
@@ -27,6 +27,7 @@ model:
     #P2 weighting, we do not use in final version
     p2_gamma: ~
     p2_k: ~
+    ignore_keys: ['structcond_stage_model.input_blocks.0.0']
 
     unet_config:
       target: ldm.modules.diffusionmodules.openaimodel.UNetModelDualcondV2
@@ -82,7 +83,7 @@ model:
       target: ldm.modules.diffusionmodules.openaimodel.EncoderUNetModelWT
       params:
         image_size: 96
-        in_channels: 4
+        in_channels: 8
         model_channels: 256
         out_channels: 256
         num_res_blocks: 2
