--- a/.inference_defaults.conf
+++ b/.inference_defaults.conf
@@ -2,8 +2,9 @@
 DEFAULT_CKPT="/root/dp/StableSR_Edge_v2_loss/logs/2025-10-10T03-46-34_stablesr_edge_loss_20251010_034631/checkpoints/epoch=000190.ckpt"
 DEFAULT_LOGS_DIR="/root/dp/StableSR_Edge_v3/logs"
 DEFAULT_OUTPUT_BASE="validation_results"
-DEFAULT_INIT_IMG="/mnt/nas_dp/test_dataset/128x128_valid_LR"
+DEFAULT_INIT_IMG="/mnt/nas_dp/test_dataset/32x32_valid_LR"
 DEFAULT_GT_IMG="/mnt/nas_dp/test_dataset/512x512_valid_HR"
 DEFAULT_MAX_IMAGES="-1"
 DEFAULT_CONFIG="configs/stableSRNew/v2-finetune_text_T_512_edge_800.yaml"
 DEFAULT_VQGAN_CKPT="/stablesr_dataset/checkpoints/vqgan_cfw_00011.ckpt"
+DEFAULT_SELECTED_DIR="2025-10-16T22-37-24_stablesr_edge_loss_20251016_223721"
