Add edge loss to training pipeline
- Add edge_loss_weight parameter to LatentDiffusionSRTextWT.__init__()
- Implement edge loss calculation in p_losses() method
  * Decode predicted and GT latents to image space
  * Generate Canny edge maps using EdgeMapGenerator
  * Calculate MSE between predicted and GT edge maps
  * Add weighted edge loss to total training loss
- Add edge_loss_weight configuration parameter (default: 0.1)
- Edge loss computation flow:
  1. pred_x0 = recover from model_output based on parameterization
  2. pred_img, gt_img = decode latents to image space
  3. pred_edge, gt_edge = Canny edge detection (non-differentiable)
  4. edge_loss = MSE(pred_edge_norm, gt_edge_norm)
  5. total_loss += edge_loss_weight * edge_loss
- Training logs will show 'train/loss_edge' metric
- Tested and verified with test_edge_loss.py (5/5 tests passed)

--- a/configs/stableSRNew/v2-finetune_text_T_512_edge_800.yaml
+++ b/configs/stableSRNew/v2-finetune_text_T_512_edge_800.yaml
@@ -28,6 +28,8 @@ model:
     p2_gamma: ~
     p2_k: ~
     ignore_keys: ['structcond_stage_model.input_blocks.0.0']
+    # Edge loss configuration
+    edge_loss_weight: 10  # Weight for edge loss (set to 0 to disable)
 
     unet_config:
       target: ldm.modules.diffusionmodules.openaimodel.UNetModelDualcondV2
